Navbar and banner responsive for mobile and desktop

--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 @import "tailwindcss";
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
 
 .inter-font {
   font-family: "Inter", sans-serif;
@@ -15,17 +9,30 @@
   font-style: normal;
 }
 
+.noto-serif-font {
+  font-family: "Noto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
 }
 
+.orange-title {
+  color: #e95a08;
+  font-family: ;
+}
+
+.font-primary {
+  color: rgba(0, 0, 0, 0.5);
+}
 /* Navbar Styles */
 
 .menu-item2,
 .menu-item3 {
   color: #8987a1;
 }
-
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
